# phlpost-notifier

./: .env.example  .gitignore  Makefile  README.md  docker-compose.debug.yml  docker-compose.yml  pyproject.toml
app/: db.py  exceptions.py  main.py  models.py  services.py  settings.py  utils.py
app/api/: dependencies.py  endpoints.py
app/clients/: emailer.py  models.py  tracker.py
app/core/: events.py
app/db/: operations.py
app/services/: emailer.py  tasks.py  tracker.py
typings/asyncpg/: types.pyi
typings/asyncpg/pgproto/: types.pyi
