[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Hju Kneyck Flores"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.2"
urllib3 = "^1.26.8"
fastapi = "^0.73.0"
uvicorn = {extras = ["standard"], version = "^0.17.1"}
aiohttp = "^3.8.1"
aiodns = "^3.0.0"
cchardet = "^2.1.7"
email-validator = "^1.1.3"
python-decouple = "^3.5"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pylint = "^2.12.2"
pyright = "^0.0.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
